<resources>
    <string name="app_name">SpotifyCopy</string>
    <string name="millions_of_songs_free_on_spotify">Millions of songs. Free on Spotify.</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="log_in">Log in</string>
    <string name="what_s_your_email">What’s your email?</string>
    <string name="create_a_password">Create a password</string>
    <string name="what_s_your_gender">What’s your gender?</string>
    <string name="email_or_username">Email or username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_3_or_more_artists_you_like">Choose 3 or more artists you like</string>
    <string name="search">Search</string>
    <string name="examplename">ExampleName</string>
    <string name="add_artists">Add artists</string>
    <string name="artist">Artist</string>
    <string name="home">Home</string>
    <string name="your_library">Your Library</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings_and_privacy">Settings and privacy</string>
    <string name="listening_history">Listening history</string>
    <string name="what_s_new">What\'s new</string>
    <string name="view_profile">View profile</string>
    <string name="what_do_you_want_to_listen_to">What do you want to listen to?</string>
    <string name="playlist">Playlist</string>
    <string name="recents">Recents</string>
    <string name="browse_all">Browse all</string>
    <string name="exampleplaylist">ExamplePlaylist</string>
    <string name="exampletime">ExampleTime</string>
    <string name="add_to_this_playlist">Add to this playlist</string>
    <string name="great_picks">Great Picks</string>
    <string name="we_ve_made_a_playlist_to_get_you_started">We’ve made a playlist to get you started</string>
    <string name="start_listening">Start Listening</string>
    <string name="not_now">Not now</string>
    <string name="log_in_without_password">Log in without password</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="you_ll_need_to_confirm_this_email_later">You\'ll need to confirm this email later.</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="create_an_account">Create an account</string>
    <string name="use_at_least_8_characters">Use at least 8 characters</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="_0_00">0:00</string>
    <string name="songs_for_you">Songs for you</string>
    <string name="play_what_you_love">Play what you love</string>
    <string name="search_for_artists_songs_podcasts_or_audiobooks">Search for artists, songs, podcasts, or audiobooks</string>
    <string name="single">Single</string>
    <string name="music">Music</string>
    <string name="podcasts_amp_shows"><![CDATA[Podcasts & Shows]]></string>
    <string name="sign_up_free">Sign up free</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="non_binary">Non-binary</string>
    <string name="other">Other</string>
    <string name="prefer_not_to_say">Prefer not to say</string>
    <string name="find_your_favourites">Find your favourites</string>
    <string name="search_everything_you_ve_liked_followed_or_created">Search everything you\'ve liked,followed, or created</string>
    <string name="search_your_librarry">Search Your Librarry</string>
    <string name="examplecategory">ExampleCategory</string>

</resources>