<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:layout_marginTop="10dp"
    >
    <ImageView
        android:id="@+id/imgSong"
        android:layout_width="48dp"
        android:layout_height="48dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtSongName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/examplename"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtSingle"
        app:layout_constraintStart_toEndOf="@+id/imgSong"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSingle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single"
        android:textColor="#A7A7A7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtSongName"
        app:layout_constraintTop_toBottomOf="@+id/txtSongName" />

    <TextView
        android:id="@+id/txtArtistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/artist"
        android:textColor="#A7A7A7"
        app:layout_constraintBottom_toBottomOf="@+id/txtSingle"
        app:layout_constraintStart_toEndOf="@+id/txtSingle"
        app:layout_constraintTop_toTopOf="@+id/txtSingle" />
</androidx.constraintlayout.widget.ConstraintLayout>