<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsidePlaylistFragment"
    android:background="#111111"
    >

    <ImageView
        android:id="@+id/imgPlaylist"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@android:color/holo_blue_bright"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/txtPlaylistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imgPlaylist"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/exampleplaylist"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/spotifylogo"
        app:layout_constraintStart_toStartOf="@+id/txtPlaylistName"
        app:layout_constraintTop_toBottomOf="@+id/txtPlaylistName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/examplename"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageView2"
        app:layout_constraintStart_toEndOf="@+id/circleImageView2"
        app:layout_constraintTop_toTopOf="@+id/circleImageView2"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/baseline_language_24"
        app:layout_constraintStart_toStartOf="@+id/circleImageView2"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView2" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/exampletime"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="10dp"
        android:textColor="#A7A7A7"
        />



</androidx.constraintlayout.widget.ConstraintLayout>