<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.spotifycopy.view.ui.startListeningFragmentEnd.StartListeningFragmentEnd">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_17"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <View
            android:id="@+id/ellipse_1"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/ellipse" />

        <View
            android:id="@+id/ellipse_2"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="48dp"
            android:background="@drawable/ellipse"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/ellipse_3"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="96dp"
            android:background="@drawable/ellipse"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/ellipse_4"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="144dp"
            android:background="@drawable/ellipse"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/ellipse_5"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="192dp"
            android:background="@drawable/ellipse"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/great_picks"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/frame_17"
        app:layout_constraintStart_toStartOf="@+id/frame_17"
        app:layout_constraintTop_toBottomOf="@+id/frame_17" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/we_ve_made_a_playlist_to_get_you_started"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnStartListening"
        app:layout_constraintEnd_toEndOf="@+id/frame_17"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/frame_17"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnStartListening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/white"
        android:text="@string/start_listening"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/frame_17"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/frame_17"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00000000"
        android:text="@string/not_now"
        android:textColor="#62FF00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnStartListening"
        app:layout_constraintStart_toStartOf="@+id/btnStartListening"
        app:layout_constraintTop_toBottomOf="@+id/btnStartListening" />

</androidx.constraintlayout.widget.ConstraintLayout>