<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#111111"
    tools:context=".view.ui.searchFragment.SearchInsideFragment.SearchInsideFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2A2A2A">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnBack"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/left" />

                <EditText
                    android:id="@+id/edtSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    android:background="@android:color/transparent"
                    android:hint="@string/what_do_you_want_to_listen_to"
                    android:inputType="text"
                    android:textColorHint="#A7A7A7"
                    app:layout_constraintBottom_toBottomOf="@id/btnBack"
                    app:layout_constraintStart_toEndOf="@id/btnBack"
                    app:layout_constraintTop_toTopOf="@+id/btnBack" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/txtPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_what_you_love"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#A7A7A7"
        android:text="@string/search_for_artists_songs_podcasts_or_audiobooks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPlay" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSongs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:listitem="@layout/songs_for_search_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>